Add test, format, lint and release ci, use hatch-vcs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [project]
@@ -33,7 +33,10 @@ Source = "https://github.com/Grub4K/protobug"
 Funding = "https://github.com/sponsors/Grub4K"
 
 [tool.hatch.version]
-path = "src/protobug/__init__.py"
+source = "vcs"
+
+[tool.hatch.build.hooks.vcs]
+version-file = "src/protobug/_version.py"
 
 [tool.hatch.envs.default]
 dependencies = ["pre-commit"]
