--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.9"
 keywords = ["protobuf"]
 license = { file = "LICENSE" }
 authors = [
-  { name = "Simon Sawicki", email = "grub4k@grub4k.xyz" },
+  { name = "Simon Sawicki", email = "contact@grub4k.xyz" },
 ]
 classifiers = [
   "Development Status :: 4 - Beta",
