Use uv in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,11 +18,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
+    - uses: astral-sh/setup-uv@v3
       with:
-        python-version: '3.10'
+        version: latest
     - name: Install hatch
-      run: pip install hatch
+      run: uv tool install hatch
 
     - name: Build package
       run: hatch build
@@ -32,7 +32,7 @@ jobs:
         GH_TOKEN: ${{ github.token }}
         tag: ${{ github.ref_name }}
       run: |
-        gh release create --title "protobug v${tag}" --notes-from-tag "${tag}" dist/*
+        gh release create --generate-notes --title "protobug v${tag}" "${tag}" dist/*
 
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@v1.9.0
