--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,10 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: astral-sh/setup-uv@v3
-      with:
-        version: latest
-
+    - uses: astral-sh/setup-uv@v6
     - name: Install hatch
       run: uv tool install hatch
 
@@ -29,10 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: astral-sh/setup-uv@v3
-      with:
-        version: latest
-
+    - uses: astral-sh/setup-uv@v6
     - name: Install hatch
       run: uv tool install hatch
 
@@ -45,11 +39,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: astral-sh/setup-uv@v3
-      with:
-        version: latest
-
     - name: Install hatch
       run: uv tool install hatch
 
-    - name: Run tests
+    - name: Run type tests
       run: hatch run types:check
+
