--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,15 +17,12 @@ jobs:
       contents: write
 
     steps:
-    - uses: actions/checkout@v4
-    - uses: astral-sh/setup-uv@v3
+    - uses: actions/checkout@v5
+    - uses: astral-sh/setup-uv@v7
       with:
         version: latest
-    - name: Install hatch
-      run: uv tool install hatch
-
     - name: Build package
-      run: hatch build
+      run: uv build
 
     - name: Create release
       env:
