Please just work?

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -26,7 +26,9 @@ jobs:
         cache: pip
         python-version: ${{ matrix.version }}
     - name: Install dependencies
-      run: pip install --group test .
+      run: |
+        python -m pip install --update pip
+        python -m pip install --group test .
     - name: Run tests
       run: pytest
 
@@ -39,7 +41,9 @@ jobs:
       with:
         cache: pip
     - name: Install dependencies
-      run: pip install --group static-analysis
+      run: |
+        python -m pip install --update pip
+        python -m pip installstatic-analysis
     - name: Run static code analysis
       run: |
         ruff check --output-format github
@@ -59,7 +63,9 @@ jobs:
       with:
         cache: pip
     - name: Install dependencies
-      run: pip install --group ${{ matrix.checker }} .
+      run: |
+        python -m pip install --update pip
+        python -m pip install${{ matrix.checker }} .
     - name: Run type tests
       run: ${{ matrix.checker }} src/ tests/
 
