--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,9 @@ jobs:
       with:
         cache: pip
     - name: Install dependencies
-      run: pip install build
+      run: |
+        python -m pip install --update pip
+        python -m pip install --update build
     - name: Build package
       run: python -m build
 
