--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -27,7 +27,7 @@ jobs:
         python-version: ${{ matrix.version }}
     - name: Install dependencies
       run: |
-        python -m pip install --update pip
+        python -m pip install --upgrade pip
         python -m pip install --group test .
     - name: Run tests
       run: pytest
@@ -42,7 +42,7 @@ jobs:
         cache: pip
     - name: Install dependencies
       run: |
-        python -m pip install --update pip
+        python -m pip install --upgrade pip
         python -m pip installstatic-analysis
     - name: Run static code analysis
       run: |
@@ -64,7 +64,7 @@ jobs:
         cache: pip
     - name: Install dependencies
       run: |
-        python -m pip install --update pip
+        python -m pip install --upgrade pip
         python -m pip install${{ matrix.checker }} .
     - name: Run type tests
       run: ${{ matrix.checker }} src/ tests/
