--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,8 @@ jobs:
         cache: pip
     - name: Install dependencies
       run: |
-        python -m pip install --update pip
-        python -m pip install --update build
+        python -m pip --upgrade pip
+        python -m pip install --upgrade build
     - name: Build package
       run: python -m build
 
