--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip installstatic-analysis
+        python -m pip install --group static-analysis
     - name: Run static code analysis
       run: |
         ruff check --output-format github
@@ -65,7 +65,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install${{ matrix.checker }} .
+        python -m pip install --group ${{ matrix.checker }} .
     - name: Run type tests
       run: ${{ matrix.checker }} src/ tests/
 
