--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         cache: pip
     - name: Install dependencies
       run: |
-        python -m pip --upgrade pip
+        python -m pip install --upgrade pip
         python -m pip install --upgrade build
     - name: Build package
       run: python -m build
