--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -60,7 +60,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install --group ${{ matrix.checker }} .
+        python -m pip install --group ${{ matrix.checker }}
     - name: Run type tests
       run: ${{ matrix.checker }} src/ tests/
 
