--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -37,6 +37,8 @@ jobs:
     steps:
     - uses: actions/checkout@v5
     - uses: actions/setup-python@v6
+      with:
+        python-version: "3.14"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -57,6 +59,8 @@ jobs:
     steps:
     - uses: actions/checkout@v5
     - uses: actions/setup-python@v6
+      with:
+        python-version: "3.14"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
