--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,8 @@
 [build-system]
-requires = ["hatchling", "hatch-vcs"]
+requires = [
+  "hatchling>=1.27.0",
+  "hatch-vcs",
+]
 build-backend = "hatchling.build"
 
 [project]
@@ -7,23 +10,40 @@ name = "protobug"
 dynamic = ["version"]
 description = "A pythonic protobuf library using dataclasses and enums"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 keywords = ["protobuf"]
-license = { file = "LICENSE" }
+license = "Unlicense"
+license-files = ["LICENSE"]
 authors = [
   { name = "Simon Sawicki", email = "contact@grub4k.dev" },
 ]
 classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Programming Language :: Python",
-  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
   "Programming Language :: Python :: Implementation :: CPython",
 ]
 dependencies = []
+
+[dependency-groups]
+test = [
+  "pytest",
+]
+mypy = [
+  "mypy",
+  {include-group = "test"},
+]
+pyright = [
+  "pyright",
+  {include-group = "test"},
+]
+static-analysis = [
+  "ruff==0.14.*",
+]
 
 [project.urls]
 Documentation = "https://github.com/yt-dlp/protobug?tab=readme-ov-file"
@@ -37,53 +57,10 @@ source = "vcs"
 [tool.hatch.build.hooks.vcs]
 version-file = "src/protobug/_version.py"
 
-[tool.hatch.envs.default]
-installer = "uv"
-dependencies = ["pre-commit"]
-
-[tool.hatch.envs.types]
-installer = "uv"
-extra-dependencies = [
-  "mypy",
-  "pytest",
-  "types-setuptools",
-  "types-Pygments",
-]
-
-[tool.hatch.envs.types.scripts]
-check = "mypy {args:src/protobug tests}"
-
 [tool.mypy]
 python_version = "3.11"
 check_untyped_defs = true
 disallow_untyped_defs = true
-
-[tool.hatch.envs.hatch-test]
-installer = "uv"
-extra-args = [
-  "--tb=short",
-]
-randomize = false
-parallel = false
-retries = 0
-
-[tool.hatch.envs.hatch-test.scripts]
-run = "pytest{env:HATCH_TEST_ARGS:} {args}"
-run-cov = "echo Code coverage not implemented && exit 1"
-
-[[tool.hatch.envs.hatch-test.matrix]]
-python = [
-  "3.9",
-  "3.10",
-  "3.11",
-  "3.12",
-  "3.13",
-]
-
-[tool.hatch.envs.hatch-static-analysis]
-installer = "uv"
-dependencies = ["ruff==0.11.*"]
-config-path = "pyproject.toml"
 
 [tool.ruff.lint]
 select = [
