--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -2,7 +2,6 @@ name: Checks
 on:
   push:
     branches:
-    - main
   pull_request:
 
 permissions:
@@ -12,36 +11,69 @@ jobs:
   tests:
     name: Tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version:
+        - "3.10"
+        - "3.11"
+        - "3.12"
+        - "3.13"
+        - "3.14"
     steps:
-    - uses: actions/checkout@v4
-    - uses: astral-sh/setup-uv@v6
-    - name: Install hatch
-      run: uv tool install hatch
-
+    - uses: actions/checkout@v5
+    - uses: actions/setup-python@v6
+      with:
+        python-version: ${{ matrix.version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install --group test .
     - name: Run tests
-      run: hatch test --all
+      run: pytest
 
   static-analysis:
     name: Static code analysis
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: astral-sh/setup-uv@v6
-    - name: Install hatch
-      run: uv tool install hatch
-
+    - uses: actions/checkout@v5
+    - uses: actions/setup-python@v6
+      with:
+        python-version: "3.14"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install --group static-analysis
     - name: Run static code analysis
-      run: hatch fmt --check
+      run: |
+        ruff check --output-format github
+        ruff format --check --preview --output-format github
 
   type-checking:
     name: Type checking
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        checker:
+        - mypy
+        - pyright
     steps:
-    - uses: actions/checkout@v4
-    - uses: astral-sh/setup-uv@v3
-    - name: Install hatch
-      run: uv tool install hatch
-
+    - uses: actions/checkout@v5
+    - uses: actions/setup-python@v6
+      with:
+        python-version: "3.14"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install --group ${{ matrix.checker }} .
     - name: Run type tests
-      run: hatch run types:check
+      run: ${{ matrix.checker }} src/ tests/
 
+  all:
+    runs-on: ubuntu-latest
+    needs:
+    - tests
+    - static-analysis
+    - type-checking
+    steps:
+    - run: |
+        true
